--- a/package.json
+++ b/package.json
@@ -17,8 +17,15 @@
   },
   "homepage": "https://github.com/Sushi-S1/Spartahack-2019#readme",
   "dependencies": {
+    "@firebase/app": "^0.3.7",
+    "@firebase/firestore": "^1.0.0",
     "connect": "^3.6.6",
     "electron": "^4.0.1",
-    "serve-static": "^1.13.2"
+    "firebase": "^5.8.0",
+    "googleapis": "^27.0.0",
+    "serve-static": "^1.13.2",
+    "vue-firestore": "^0.3.16",
+    "vuefire": "^1.4.5",
+    "vuetify": "^1.4.2"
   }
 }
