--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "electron": "^4.0.1",
     "firebase": "^5.8.0",
     "googleapis": "^27.0.0",
+    "python-shell": "^1.0.7",
     "serve-static": "^1.13.2",
     "vue-firestore": "^0.3.16",
     "vuefire": "^1.4.5",
-    "vuetify": "^1.4.2"
+    "vuetify": "^1.4.2",
+    "yes": "^1.1.1"
   }
 }
